# mindvision_usb_node

./: CMakeLists.txt  README.md  package.xml
nodes/mindvision/: mindvision.cpp
scripts/: mindvision.launch
